# ClipboardTTSClient

./: .gitignore  README.md
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  pyproject.toml  setup.py  toml_gen.py
src/clipboard_tts_client/: about.py  desktop.py  indicator.py  lib_funcs.py
