[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipboard_tts_client"
version = "0.1.2"
description = "Program that collects text from clipboard and converts it to speech using tts-program-server"
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["tts", "client"]
dependencies = [
    "PyQt5",
    "text-to-speech-program",
    "langdetect"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx/ClipboardTTSClient/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx/ClipboardTTSClient/doc"
"Source" = "https://github.com/trucomanx/ClipboardTTSClient"

[project.scripts]
"clipboard-tts-indicator" = "clipboard_tts_client.indicator:main"

[tool.setuptools]
packages = ["clipboard_tts_client", "clipboard_tts_client.modules"]

[tool.setuptools.package-data]
"clipboard_tts_client" = ["icons/logo.png"]
